--- a/Class6Demo/GoogleService-Info.plist
+++ b/Class6Demo/GoogleService-Info.plist
@@ -7,21 +7,21 @@
 	<key>AD_UNIT_ID_FOR_INTERSTITIAL_TEST</key>
 	<string>ca-app-pub-3940256099942544/4411468910</string>
 	<key>CLIENT_ID</key>
-	<string>132189427914-ab3jinq4ivof25rg9kb929kht2tmt1ec.apps.googleusercontent.com</string>
+	<string>632981210912-cvrbdfov1oliop0okd9b1kll14du66rq.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.132189427914-ab3jinq4ivof25rg9kb929kht2tmt1ec</string>
+	<string>com.googleusercontent.apps.632981210912-cvrbdfov1oliop0okd9b1kll14du66rq</string>
 	<key>API_KEY</key>
-	<string>AIzaSyAvJ2VabVhzFoT1SDwGZOZjjOBFnN7370c</string>
+	<string>AIzaSyDXe3PDQZU82Qyf9Ru7swV1vCY7_uWoNi8</string>
 	<key>GCM_SENDER_ID</key>
-	<string>132189427914</string>
+	<string>632981210912</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.menachi.Class6Demo</string>
+	<string>com.cs.iosProject</string>
 	<key>PROJECT_ID</key>
-	<string>ios2018-f658d</string>
+	<string>ios-project-9f8b7</string>
 	<key>STORAGE_BUCKET</key>
-	<string>ios2018-f658d.appspot.com</string>
+	<string>ios-project-9f8b7.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
 	<true></true>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -33,8 +33,8 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:132189427914:ios:81e69157be1d350e</string>
+	<string>1:632981210912:ios:0df3d4592e0e3ece</string>
 	<key>DATABASE_URL</key>
-	<string>https://ios2018-f658d.firebaseio.com</string>
+	<string>https://ios-project-9f8b7.firebaseio.com</string>
 </dict>
 </plist>
